--- a/permit-io-appwrite/functions/sync-with-permit/package.json
+++ b/permit-io-appwrite/functions/sync-with-permit/package.json
@@ -3,17 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/main.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "format": "prettier --write ."
   },
   "dependencies": {
-    "appwrite": "^16.1.0",
-    "node-appwrite": "^12.0.1",
+    "appwrite": "^17.0.0",
+    "node-appwrite": "^14.1.0",
     "permitio": "^2.7.2-rc"
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "typescript": "^5.7.3"
+    "prettier": "^3.2.5"
   }
 }
