--- a/permit-io-appwrite/package.json
+++ b/permit-io-appwrite/package.json
@@ -14,6 +14,7 @@
     "appwrite": "^16.1.0",
     "autoprefixer": "^10.4.20",
     "lucide-react": "^0.471.1",
+    "permitio": "^2.7.2-rc",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
